<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".upload_noticias">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_upload_noticias_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_upload_noticias_button_news"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/fragment_upload_noticias_button_text"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/blue_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_upload_noticias_button_exploits"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:text="@string/fragment_upload_exploit_button_text"
            android:textColor="@color/white"
            android:background="@drawable/transparent_button_color_999999"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_upload_noticias_button_news"
            app:layout_constraintEnd_toStartOf="@id/fragment_upload_noticias_button_forum"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_upload_noticias_button_forum"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:text="@string/fragment_upload_forum_button_text"
            android:textColor="@color/white"
            android:background="@drawable/transparent_button_color_999999"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/fragment_upload_noticias_et_newName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/fragment_upload_noticias_et_name_hint"
        android:textColor="@color/white"
        android:textColorHint="#999999"
        android:textSize="15sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_upload_noticias_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/transparent_button_color_999999"/>

    <EditText
        android:id="@+id/fragment_upload_noticias_et_linkext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/fragment_upload_noticias_et_link_hint"
        android:textColor="@color/white"
        android:textColorHint="#999999"
        android:textSize="15sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_upload_noticias_et_newName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/transparent_button_color_999999"/>

    <EditText
        android:id="@+id/fragment_upload_noticias_et_linkImage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/fragment_upload_noticias_et_link_imagen_hint"
        android:textColor="@color/white"
        android:textColorHint="#999999"
        android:textSize="15sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_upload_noticias_et_linkext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/transparent_button_color_999999"/>

    <TextView
        android:id="@+id/fragment_upload_noticias_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Descripción"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_upload_noticias_et_linkImage"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#878787"
        app:layout_constraintBottom_toBottomOf="@id/fragment_upload_noticias_text"
        app:layout_constraintStart_toStartOf="@id/fragment_upload_noticias_text"
        app:layout_constraintEnd_toEndOf="@id/fragment_upload_noticias_text"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/fragment_upload_noticias_et_desc"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:textColor="@color/white"
        android:textColorHint="#999999"
        android:textSize="15sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_upload_noticias_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/desc_upload_color_999999"
        android:gravity="top"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_upload_noticias_button_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="POST"
        android:padding="22sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/fragment_upload_noticias_et_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>