<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones">

           <ImageView
               android:id="@+id/activity_options_image"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_marginStart="30dp"
               android:layout_marginTop="30dp"
               android:background="@drawable/user_image_background"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"/>

           <TextView
               android:id="@+id/activity_options_username"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text=""
               android:textSize="30sp"
               app:layout_constraintStart_toEndOf="@id/activity_options_image"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginStart="30dp"
               android:layout_marginTop="45dp"/>

           <View
               android:layout_width="0dp"
               android:layout_height="1dp"
               android:background="#878787"
               app:layout_constraintBottom_toBottomOf="@+id/activity_options_username"
               app:layout_constraintEnd_toEndOf="@+id/activity_options_username"
               app:layout_constraintStart_toStartOf="@+id/activity_options_username"
               app:layout_constraintTop_toTopOf="@+id/activity_options_username"
               android:layout_marginTop="25dp"/>

           <RelativeLayout
               android:id="@+id/activity_options_rel1"
               android:layout_width="match_parent"
               android:layout_height="190dp"
               android:background="@drawable/options_activity_bg"
               app:layout_constraintTop_toBottomOf="@id/activity_options_image"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="15dp"
               android:layout_marginStart="30dp"
               android:layout_marginEnd="30dp">

               <ImageView
                   android:id="@+id/activity_options_darkmode_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginTop="15dp"
                   android:layout_marginStart="15dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#5B448C"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/dark_mode"
                   android:scaleX="1.5"
                   android:scaleY="1.5"
                   android:layout_marginTop="26dp"
                   android:layout_marginStart="26dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/activity_options_darkMode"
                   android:textColor="@color/white"
                   android:layout_marginTop="27dp"
                   android:layout_marginStart="75dp"/>

               <Switch
                   android:id="@+id/activity_options_darkMode"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="25dp"
                   android:layout_marginStart="270dp"
                   tools:ignore="UseSwitchCompatOrMaterialXml" />

               <ImageView
                   android:id="@+id/activity_options_bell_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginStart="15dp"
                   android:layout_marginTop="70dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#428094"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/bell"
                   android:scaleX="0.75"
                   android:scaleY="0.75"
                   android:layout_marginTop="70dp"
                   android:layout_marginStart="16dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/activity_options_notis"
                   android:textColor="@color/white"
                   android:layout_marginTop="80dp"
                   android:layout_marginStart="75dp"/>

               <Switch
                   android:id="@+id/activity_options_notis"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="80dp"
                   android:layout_marginStart="270dp"
                   tools:ignore="UseSwitchCompatOrMaterialXml" />


               <ImageView
                   android:id="@+id/activity_options_accmode_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginStart="15dp"
                   android:layout_marginTop="130dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#B99D56"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/private_acc"
                   android:scaleX="1.5"
                   android:scaleY="1.5"
                   android:layout_marginTop="142dp"
                   android:layout_marginStart="27dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/activity_options_accmode"
                   android:textColor="@color/white"
                   android:layout_marginTop="137dp"
                   android:layout_marginStart="75dp"/>

               <Switch
                   android:id="@+id/activity_options_accmode"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="137dp"
                   android:layout_marginStart="270dp"
                   tools:ignore="UseSwitchCompatOrMaterialXml" />
           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/activity_options_rel2"
               android:layout_width="match_parent"
               android:layout_height="190dp"
               android:background="@drawable/options_activity_bg"
               app:layout_constraintTop_toBottomOf="@id/activity_options_rel1"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="15dp"
               android:layout_marginStart="30dp"
               android:layout_marginEnd="30dp">

               <ImageView
                   android:id="@+id/activity_options_edit_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginStart="15dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#C18798"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/edit"
                   android:scaleX="1.25"
                   android:scaleY="1.25"
                   android:layout_marginTop="27dp"
                   android:layout_marginStart="23dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/activity_options_edit"
                   android:textColor="@color/white"
                   android:layout_marginTop="27dp"
                   android:layout_marginStart="75dp"/>

               <ImageButton
                   android:id="@+id/activity_options_editProfile"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:background="@android:color/transparent"
                   android:src="@drawable/right_arrow"
                   android:layout_marginTop="25dp"
                   android:layout_marginStart="285dp"/>

               <ImageView
                   android:id="@+id/activity_options_info_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginStart="15dp"
                   android:layout_marginTop="75dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#A4C187"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/info_options"
                   android:scaleX="1.25"
                   android:scaleY="1.25"
                   android:layout_marginTop="83dp"
                   android:layout_marginStart="23dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/activity_options_aboutUs"
                   android:textColor="@color/white"
                   android:layout_marginTop="87dp"
                   android:layout_marginStart="75dp"/>

               <ImageButton
                   android:id="@+id/activity_options_info"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:background="@android:color/transparent"
                   android:src="@drawable/right_arrow"
                   android:layout_marginTop="87dp"
                   android:layout_marginStart="285dp"/>

               <ImageView
                   android:id="@+id/activity_options_faqs_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginStart="15dp"
                   android:layout_marginTop="130dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#C1B187"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/faqs_secpriv"
                   android:scaleX="1.15"
                   android:scaleY="1.15"
                   android:layout_marginTop="140dp"
                   android:layout_marginStart="23dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="FAQS Y Seguridad / Privacidad"
                   android:textColor="@color/white"
                   android:layout_marginTop="140dp"
                   android:layout_marginStart="75dp"/>

               <ImageButton
                   android:id="@+id/activity_options_faqs"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:background="@android:color/transparent"
                   android:src="@drawable/right_arrow"
                   android:layout_marginTop="147dp"
                   android:layout_marginStart="285dp"/>

           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/activity_options_rel3"
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:background="@drawable/options_activity_bg"
               app:layout_constraintTop_toBottomOf="@id/activity_options_rel2"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="25dp"
               android:layout_marginStart="30dp"
               android:layout_marginEnd="30dp">

               <ImageView
                   android:id="@+id/activity_options_session_img"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginTop="15dp"
                   android:layout_marginStart="15dp"
                   android:background="@drawable/user_image_background"
                   android:backgroundTint="#C18787"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/power"
                   android:scaleX="1.75"
                   android:scaleY="1.75"
                   android:layout_marginTop="27dp"
                   android:layout_marginStart="27dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/activity_options_clssSesion"
                   android:textColor="@color/white"
                   android:layout_marginTop="24dp"
                   android:layout_marginStart="75dp"/>

               <ImageButton
                   android:id="@+id/activity_options_closseSes"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:background="@android:color/transparent"
                   android:src="@drawable/right_arrow"
                   android:layout_marginTop="25dp"
                   android:layout_marginStart="285dp"/>
           </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
